Closed
Bug 413272
Opened 18 years ago
Closed 18 years ago
HTML SELECT does not show selected item in windows "selected text" style - recent regression
Categories
(Core :: Layout: Form Controls, defect, P3)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
mozilla1.9beta3
People
(Reporter: duncan.loveday, Assigned: twanno)
References
Details
(Keywords: regression, testcase)
Attachments
(4 files, 1 obsolete file)
|
179 bytes,
text/html
|
Details | |
|
181 bytes,
text/html
|
Details | |
|
328 bytes,
text/html
|
Details | |
|
16.01 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3pre) Gecko/2008012004 Minefield/3.0b3pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3pre) Gecko/2008012004 Minefield/3.0b3pre
A simple HTML select such as that below no longer shows the selected option in the normal windows "selected text" style.
<select size="5" multiple>
<option selected>aaa</option>
<option>bbb</option>
<option>ccc</option>
</select>
Reproducible: Always
Steps to Reproduce:
1. Open the attached file and note the style of the first option "aaa"
2. Click on one of the options and note the difference.
3.
Actual Results:
The text of the selected item aaa appears black on a pale grey background when first rendered. Clicking on it results in the normal selected text style, white text on a blue background in my case.
Expected Results:
The text should be in "selected text" style when first rendered.
Regressed since 10/1/2007
| Reporter | ||
Comment 1•18 years ago
|
||
| Reporter | ||
Updated•18 years ago
|
Keywords: regression,
testcase
Version: unspecified → Trunk
Comment 3•18 years ago
|
||
This regressed between 2008-01-17 00 and 2008-01-17 05:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-01-17+00&maxdate=2008-01-17+05&cvsroot=%2Fcvsroot
So I think a regression from bug 412281.
| Reporter | ||
Comment 4•18 years ago
|
||
So it's intentional then ?
It doesn't look right to me on windows. Focus is shown by a dotted line around the item so there is no problem with using the same colour when focussed or unfocussed.
Comment 5•18 years ago
|
||
No, it's not intentional. It is intentional on linux and mac, I guess, but this should not be happening on Windows.
That whole gray look when something isn't focused but is selected doesn't really exist on Windows. So I don't think it should be expanded to list controls.
Comment 6•18 years ago
|
||
Comment 7•18 years ago
|
||
| Assignee | ||
Comment 8•18 years ago
|
||
Make -moz-cellhighlight* colors the same as HighLight* on Windows, so that selected items in HTML lists always have the same background and foreground colors, regardless the focused state of the list.
> That whole gray look when something isn't focused but is selected doesn't
> really exist on Windows.
What about selected items in trees and lists in the UI (bug 412719)? Currently they get grayed out when the tree / list looses focus.
Assignee: nobody → twanno
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #298262 -
Flags: superreview?(roc)
Attachment #298262 -
Flags: review?(roc)
Comment 9•18 years ago
|
||
(In reply to comment #8)
> What about selected items in trees and lists in the UI (bug 412719)? Currently
> they get grayed out when the tree / list looses focus.
Yes, it seems to exist (the graying out for non-selected items) for trees and lists (I looked at the bookmarks manager of IE7 and Outlook Express).
Comment 10•18 years ago
|
||
I assume you've checked that those values are not used anywhere else, either within our tree or on the web at large? Or that if they are, the change is OK with those consumers?
| Assignee | ||
Comment 11•18 years ago
|
||
Comment on attachment 298262 [details] [diff] [review]
Fix highlight on lists for Windows
(In reply to comment #10)
> I assume you've checked that those values are not used anywhere else, either
> within our tree or on the web at large? Or that if they are, the change is OK
> with those consumers?
>
Actually I checked the tree, where it is only used in /themes/classic/global/win. Assuming that since SeaMonkey switched to toolkit, that part of the code is not used any more, I figured this change would be OK.
What's more important according to comment #5 and the purpose of the -moz-cellhighlight colors, it seemed the real bug was that -moz-cellhighlight was set to the wrong colors on Windows.
In that case assuming that consumers only use -moz-cellhighlight for its purpose: to indicate that an unfocused list item is selected, those consumers would only adopt a bug in Mozilla.
But since comment #9 refutes comment #5, that reason to go for this patch is not valid anymore, and therefore this patch would probably be incorrect.
Attachment #298262 -
Attachment is obsolete: true
Attachment #298262 -
Flags: superreview?(roc)
Attachment #298262 -
Flags: review?(roc)
Flags: blocking1.9? → blocking1.9+
Priority: -- → P3
| Assignee | ||
Comment 12•18 years ago
|
||
This adds the -moz-html-cellhighlight(text) CSS system colors, which are used for selected options in unfocused HTML selects (I'm open to better names for these colors).
These are the same colors as -moz-cellhighlight* for Mac and Linux. For Windows these are same as the HighLight* colors, which also applies for Photon, BeOS and OS2. As I have no idea what colors would be best on those platforms.
As for the changed comment in nsXPLookAndFeel.cpp: the value of the sizes in the array has been updated to the string with the most characters, but not the string in the comment (this seems as good a time as any to fix that).
Attachment #298554 -
Flags: superreview?(roc)
Attachment #298554 -
Flags: review?(roc)
Attachment #298554 -
Flags: superreview?(roc)
Attachment #298554 -
Flags: superreview+
Attachment #298554 -
Flags: review?(roc)
Attachment #298554 -
Flags: review+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 13•18 years ago
|
||
Checking in widget/public/nsILookAndFeel.h;
/cvsroot/mozilla/widget/public/nsILookAndFeel.h,v <-- nsILookAndFeel.h
new revision: 1.62; previous revision: 1.61
done
Checking in widget/src/beos/nsLookAndFeel.cpp;
/cvsroot/mozilla/widget/src/beos/nsLookAndFeel.cpp,v <-- nsLookAndFeel.cpp
new revision: 1.30; previous revision: 1.29
done
Checking in widget/src/cocoa/nsLookAndFeel.mm;
/cvsroot/mozilla/widget/src/cocoa/nsLookAndFeel.mm,v <-- nsLookAndFeel.mm
new revision: 1.13; previous revision: 1.12
done
Checking in widget/src/gtk2/nsLookAndFeel.cpp;
/cvsroot/mozilla/widget/src/gtk2/nsLookAndFeel.cpp,v <-- nsLookAndFeel.cpp
new revision: 1.36; previous revision: 1.35
done
Checking in widget/src/os2/nsLookAndFeel.cpp;
/cvsroot/mozilla/widget/src/os2/nsLookAndFeel.cpp,v <-- nsLookAndFeel.cpp
new revision: 1.44; previous revision: 1.43
done
Checking in widget/src/photon/nsLookAndFeel.cpp;
/cvsroot/mozilla/widget/src/photon/nsLookAndFeel.cpp,v <-- nsLookAndFeel.cpp
new revision: 1.35; previous revision: 1.34
done
Checking in widget/src/windows/nsLookAndFeel.cpp;
/cvsroot/mozilla/widget/src/windows/nsLookAndFeel.cpp,v <-- nsLookAndFeel.cpp
new revision: 1.65; previous revision: 1.64
done
Checking in widget/src/xpwidgets/nsXPLookAndFeel.cpp;
/cvsroot/mozilla/widget/src/xpwidgets/nsXPLookAndFeel.cpp,v <-- nsXPLookAndFeel.cpp
new revision: 1.57; previous revision: 1.56
done
Checking in layout/style/forms.css;
/cvsroot/mozilla/layout/style/forms.css,v <-- forms.css
new revision: 3.145; previous revision: 3.144
done
Checking in layout/style/nsCSSKeywordList.h;
/cvsroot/mozilla/layout/style/nsCSSKeywordList.h,v <-- nsCSSKeywordList.h
new revision: 3.99; previous revision: 3.98
done
Checking in layout/style/nsCSSProps.cpp;
/cvsroot/mozilla/layout/style/nsCSSProps.cpp,v <-- nsCSSProps.cpp
new revision: 3.160; previous revision: 3.159
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
OS: Windows XP → All
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
You need to log in
before you can comment on or make changes to this bug.
Description
•