Bug 413272 - "HTML SELECT does not show selected item in windows "selected text" style - recent regression" (use new CSS system color for html select options) [p=twanno@lycos.nl (Teune van Steeg) r+sr=roc a=blocking1.9+]